--- a/src/pages/Aduke/Music/style.css
+++ b/src/pages/Aduke/Music/style.css
@@ -45,3 +45,12 @@
 .omoge-playlist img:hover {
   padding-top: 5px;
 }
+
+@media screen and (max-width: 768px) {
+  .omoge-music .heading {
+    width: 85%;
+  }
+  .omoge-playlist {
+    width: 85%;
+  }
+}
